2006-11-03  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpbrushes.c
	* libgimp/gimpgradients.c
	* libgimp/gimpimage.c
	* libgimp/gimplayer.c
	* libgimp/gimppalette.c
	* libgimp/gimppalettes.c
	* libgimp/gimppatterns.c
	* libgimp/gimpselection.c: also let all non-generated deprecated
	functions see their declarations.

2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.[ch]: added gimp_image_add_layers() which
	takes a list of layers and vierport coordinates to center the
	layers in.

	* app/dialogs/file-open-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/widgets/gimplayertreeview.c: use it instead of having the
	same code three times.

2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorselectorpalette.c
	(gimp_color_selector_palette_set_color): select a matching color
	in the palette if possible.

2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpcolorselectorpalette.[ch]: new widget featuring
	a proof-of-concept palette color selector. It always shows the
	current palette and doesn't bother to have any features yet. If I
	don't get around finishing this I will disable it for the 2.4
	release, but it's better kept in CVS than on my disk...
	Addresses bug #132146.

	* app/widgets/gimpcolordialog.c (gimp_color_dialog_new): attach
	the passed context to the dialog so the palette selector can find
	it (puke).

	* app/gui/gui.c (gui_restore_callback): register the new object
	with the GType system.

2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/core/core-enums.[ch] (enum GimpUndoType): added value
	GIMP_UNDO_GROUP_LAYER_ADD.

	* app/file/file-open.[ch]: changed file_open_layer() to
	file_open_layers(), added parameter "gboolean merge_visible",
	return a GList of layers.

	* app/dialogs/file-open-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/widgets/gimplayertreeview.c: pass merge_visible = FALSE and
	add all returned layers to the image. Fixes bug #358082.